--- a/guestbook/guestbook-ui-svc.yaml
+++ b/guestbook/guestbook-ui-svc.yaml
@@ -1,10 +1,17 @@
 apiVersion: v1
 kind: Service
 metadata:
+  creationTimestamp: null
+  labels:
+    app.kubernetes.io/instance: guestbook
   name: guestbook-ui
 spec:
   ports:
   - port: 80
+    protocol: TCP
     targetPort: 80
   selector:
     app: guestbook-ui
+  type: LoadBalancer
+status:
+  loadBalancer: {}
